Bug 475370 - Tokodon doesn't remember Window position or Size
Summary: Tokodon doesn't remember Window position or Size
Status: RESOLVED BACKTRACE
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-08 12:42 UTC by Unknown
Modified: 2023-10-31 00:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.12
Sentry Crash Report:


Attachments
A picture of Tokodon overflowing on startup (780.50 KB, image/png)
2023-10-20 04:50 UTC, Unknown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2023-10-08 12:42:03 UTC
### SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Fedora 38 KDE Plasma edition
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.0
Comment 1 Unknown 2023-10-13 02:04:59 UTC
It seems to happen that if the default Noto Sans is used. It doesn't remember position and size and overflows the screen without properly inside it.

But when the font is changed to dejavu Sans or Droid Sans. It does.

It's possibly with Font size and aesthetics it remembers with certain fonts. It doesn't with certain. I couldn't test all of them.
Comment 2 Bug Janitor Service 2023-10-19 20:23:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/tokodon/-/merge_requests/387
Comment 3 Joshua Goins 2023-10-19 20:30:42 UTC
Git commit 9faa0275539b782697372f962619dea50adec0c8 by Joshua Goins.
Committed on 19/10/2023 at 22:22.
Pushed by redstrate into branch 'master'.

Add support for saving and restoring window size/position

We previously restored the size/position, but there was no way to
actually save it. Now this saves it!

M  +2    -0    src/CMakeLists.txt
M  +24   -0    src/content/ui/Main.qml
M  +10   -4    src/main.cpp
A  +36   -0    src/utils/windowcontroller.cpp     [License: LGPL(v2.0+)]
A  +27   -0    src/utils/windowcontroller.h     [License: LGPL(v2.0+)]

https://invent.kde.org/network/tokodon/-/commit/9faa0275539b782697372f962619dea50adec0c8
Comment 4 Joshua Goins 2023-10-19 20:43:07 UTC
This will show up in the next major release, 23.12 :)
Comment 5 Unknown 2023-10-20 04:50:45 UTC
Created attachment 162441 [details]
A picture of Tokodon overflowing on startup

Just wanna make sure that you understand clearly. Whenever I open tokodon it overflows like in the above image.

But it doesn't overflow when I change the system fonts to others such as Droid Sans. If change the font and reopen tokodon. It doesn't overflow and is within the screen.
Comment 6 Joshua Goins 2023-10-30 15:03:13 UTC
Interesting, what screen resolution (and display scaling, if you use that) are you using so I can try reproducing?
Comment 7 Unknown 2023-10-31 00:17:03 UTC
(In reply to Joshua Goins from comment #6)
> Interesting, what screen resolution (and display scaling, if you use that)
> are you using so I can try reproducing?

I have a resolution of 1366 x 768. Default scaling of 100%.