Add support for saving and restoring window size/position

We previously restored the size/position, but there was no way to
actually save it. Now this saves it!

BUG: 475370