src/content/ui/Main.qml
@@ -75,6 +75,8 @@ Kirigami.ApplicationWindow {
         if (AccountManager.isReady) {
             startupAccountCheck();
         }
+
+        saveWindowGeometryConnections.enabled = true;
     }
 
     Connections {
@@ -520,5 +522,27 @@ Kirigami.ApplicationWindow {
         Kirigami.LoadingPlaceholder {
             anchors.centerIn: parent
         }
+    }
+
+    // This timer allows to batch update the window size change to reduce
+    // the io load and also work around the fact that x/y/width/height are
+    // changed when loading the page and overwrite the saved geometry from
+    // the previous session.
+    Timer {
+        id: saveWindowGeometryTimer
+        interval: 1000
+        onTriggered: WindowController.saveGeometry()
+    }
+
+    Connections {
+        id: saveWindowGeometryConnections
+        enabled: false // Disable on startup to avoid writing wrong values if the window is hidden
+        target: root
+
+        function onClosing() { WindowController.saveGeometry(); }
+        function onWidthChanged() { saveWindowGeometryTimer.restart(); }
+        function onHeightChanged() { saveWindowGeometryTimer.restart(); }
+        function onXChanged() { saveWindowGeometryTimer.restart(); }
+        function onYChanged() { saveWindowGeometryTimer.restart(); }
     }
 }
